Update notification annotations
